# karo

./: Dockerfile  Makefile  README.md  go.mod  go.sum
agentic-sandbox-client/: pyproject.toml  setup.py
agentic-sandbox-client/agentic_sandbox/: sandbox.py
agentic-sandbox-client/agentic_sandbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
api/v1/: groupversion_info.go
assets/: compare_files_test.go  doc.go
baseline-agent-long-running/: Dockerfile  agent_permissions.yaml  deployment_agent.yaml  requirements.txt
baseline-agent-long-running/agents/: advisor.py  coder.py  debugger.py
baseline-agent-long-running/model/: gemini.py
baseline-agent-long-running/server/: app.py
baseline-agent-long-running/workflow/: kaggle.py
cmd/manager/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml
config/manager/: kustomization.yaml  manager.yaml
config/manifests/: kustomization.yaml
config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  endpoint_editor_role.yaml  endpoint_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml  skippy_deployment_role.yaml  skippy_deployment_role_binding.yaml
config/samples/: kustomization.yaml  model_v1_agent_integration.yaml  model_v1_helloworld_integration.yaml  model_v1_helloworld_integration_gcs.yaml  (+2 more)
hack/: boilerplate.go.txt
pkg/: README.md
sandbox-runtime/: Dockerfile
(+74 files in other folders)
